# IEEE-Tramsactions-on-CPS

./: .gitignore  LICENSE  README.md  SECURITY.md
CPS Implementation/: README.md  pyproject.toml
CPS Implementation/src/v2g_cps/: __init__.py  common.py  run_pipeline.py
CPS Implementation/src/v2g_cps/analysis/: __init__.py  report.py  tables.py
CPS Implementation/src/v2g_cps/ml/: __init__.py  data.py  models.py  train.py
CPS Implementation/src/v2g_cps/protocol/: __init__.py  constants.py  costs.py  demo.py  models.py  primitives.py  puf.py  scheme.py
CPS Implementation/tests/: test_costs.py  test_ml.py  test_protocol.py  test_puf.py
