[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2g-cps-implementation"
version = "0.1.0"
description = "Python implementation of the AI-enhanced secure V2G CPS article."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=44.0.0",
  "matplotlib>=3.9.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "pypdf>=6.7.0",
  "PyMuPDF>=1.27.0",
  "scikit-learn>=1.6.0",
  "seaborn>=0.13.0",
  "torch>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
